# qwen3-training

./: README.md  config.py  data_loader.py  inference.py  pyproject.toml  train_full.py  train_lora.py
configs/: accelerate_config.yaml  deepspeed_zero2.json  deepspeed_zero3_offload.json
